--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT=5000
-MONGO_URI=mongodb+srv://vastradparag_db_user:6PWh9YW75KWvAsBz@aiknowledge.hhdqmqk.mongodb.net/
-JWT_SECRET=supersecret
-GEMINI_API_KEY=AIzaSyATX7ZnuF2YEib36crhmXidONpW-XyLKcE
+MONGO_URI=
+JWT_SECRET=
+GEMINI_API_KEY=
 
 GEMINI_MODEL=gemini-2.5-flash-lite
 GEMINI_EMBEDDING_MODEL=text-embedding-004
